# InterCooperative-Network

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE.md  PROJECT_STRUCTURE_AND_CODE_CONTENTS.txt  README.md  all_code_files_content.txt  build_and_run_demo.sh  cat_files.sh  cli.py  cliff.toml  intercooperative_network.md  main.py  requirements.txt  run_admin_console.py  run_tests.py  test_blockchain.py  test_contracts.py  test_imports.py  update_project.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml
crates/icn_api/: Cargo.toml  README.md  cargo.toml
crates/icn_api/src/: lib.rs  web.rs
crates/icn_blockchain/: Cargo.toml  README.md  cargo.toml
crates/icn_blockchain/src/: asset_tokenization.rs  block.rs  blockchain.rs  lib.rs  transaction.rs  transaction_validator.rs
crates/icn_common/: Cargo.toml
crates/icn_common/src/: bit_utils.rs  error.rs  lib.rs  main.rs
crates/icn_common_types/: Cargo.toml
crates/icn_common_types/src/: lib.rs
crates/icn_consensus/: Cargo.toml
crates/icn_consensus/src/: bft_poc.rs  consensus.rs  lib.rs  proof_of_cooperation.rs
crates/icn_core/: Cargo.toml  cargo.toml
crates/icn_core/src/: cargo.toml  config.rs  error.rs  lib.rs  main.rs
crates/icn_core/src/cli/: mod.rs
crates/icn_core/src/logging/: mod.rs
crates/icn_core/src/security/: mod.rs
crates/icn_core/tests/: blockchain_and_consensus_tests.rs  blockchain_tests.rs  icn_node_tests.rs  integration_tests.rs  mod.rs  smart_contract_tests.rs
crates/icn_currency/: Cargo.toml
crates/icn_currency/src/: asset_token.rs  bond.rs  currency.rs  lib.rs  wallet.rs
crates/icn_dao/src/: lib.rs
crates/icn_demo/: Cargo.toml
crates/icn_demo/src/: main.rs
crates/icn_governance/: Cargo.toml
crates/icn_governance/src/: democracy.rs  governance.rs  lib.rs  proposal.rs  voting.rs
crates/icn_identity/: Cargo.toml
crates/icn_identity/src/: did.rs  identity_manager.rs  lib.rs
crates/icn_incentives/: Cargo.toml
crates/icn_language/: Cargo.toml
crates/icn_language/src/: bytecode.rs  lib.rs
crates/icn_market/: Cargo.toml
crates/icn_market/src/: entities.rs  lib.rs  market.rs  market_maker.rs  market_tests.rs  matching_engine.rs  order_book.rs  transaction.rs
crates/icn_network/: Cargo.toml
crates/icn_network/src/: discovery.rs  interest_packet.rs  lib.rs  naming.rs  network.rs  node.rs  packet.rs  protocol.rs  routing.rs  security.rs
crates/icn_node/src/: content_store.rs  icn_node.rs  node.rs  pending_interest_table.rs
crates/icn_node_management/: Cargo.toml
crates/icn_node_management/src/: content_store.rs  fib.rs  icn_node.rs  lib.rs  pit.rs
crates/icn_node_managment/src/: fib.rs  lib.rs
crates/icn_reputation/: Cargo.toml
crates/icn_reputation/src/: lib.rs
crates/icn_sharding/: Cargo.toml
crates/icn_sharding/src/: cross_shard_communication.rs  cross_shard_sync.rs  cross_shard_transaction_manager.rs  lib.rs
crates/icn_smart_contract/: Cargo.toml
crates/icn_smart_contract/src/: lib.rs
crates/icn_smart_contracts/: Cargo.toml
crates/icn_smart_contracts/src/: contract.pest  lib.rs
crates/icn_storage/: Cargo.toml
crates/icn_storage/src/: lib.rs  storage_manager.rs  storage_node.rs
crates/icn_testnet/: Cargo.toml
crates/icn_testnet/src/: main.rs
crates/icn_types/: Cargo.toml
crates/icn_types/src/: lib.rs
crates/icn_utils/: Cargo.toml
crates/icn_utils/src/: error.rs  lib.rs  types.rs  utils.rs
crates/icn_utils/src/types/: block.rs  mod.rs  transaction.rs
crates/icn_vm/: Cargo.rs  Cargo.toml
crates/icn_vm/src/: compiler.rs  coop_vm.rs  lib.rs  opcode.rs  smart_contract.rs  vm.rs
crates/icn_zkp/: Cargo.toml
crates/icn_zkp/src/: circuits.rs  lib.rs
data_8000/: peers.json
data_8001/: peers.json
docs/: ARCHITECTURE.md  README.md  index.html  script.js  style.css
examples/: voting_contract.coop
frontend/: app.js  index.html
icn/blockchain/: block.py  chain.py  test_blockchain.py  transaction.py
icn/cli/: admin_console.py
icn/consensus/: pocos.py
icn/dao/: governance.py
icn/federation/: federation.py
icn/identity/: did.py
icn/layers/: primary_layer.py
icn/network/: node.py
icn/smartcontracts/: contract.py  language.py  vm.py
icn/storage/: file_storage.py
icn/vm/: simple_vm.py
icn/web/: __init__.py  routes.py
icn/web/templates/: base.html  cooperative_details.html  create_cooperative.html  create_proposal.html  index.html  run_web_interface.py
tests/: test_all.py  test_blockchain.py  test_cooperative.py  test_federation.py  test_integration.py
