[workspace]
members = [
    "crates/icn_common",
    "crates/icn_blockchain",
    "crates/icn_consensus",
    "crates/icn_currency",
    "crates/icn_governance",
    "crates/icn_identity",
    "crates/icn_network",
    "crates/icn_sharding",
    "crates/icn_storage",
    "crates/icn_vm",
    "crates/icn_api",
    "crates/icn_testnet",
    "crates/icn_core",
    "crates/icn_zkp",
    "crates/icn_smart_contracts",
    "crates/icn_reputation",
    "crates/icn_market",
    "crates/icn_incentives",
    "crates/icn_language"
, "icn_demo", "crates/icn_demo"]

resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
