[package]
name = "icn_api"
version = "0.1.0"
edition = "2018"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
icn_core = { path = "../icn_core" }
icn_common = { path = "../icn_common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
