[package]
name = "icn_blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
icn_utils = { path = "../icn_utils" }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.9"
ed25519-dalek = "1.0"
rand = "0.7"
uuid = { version = "0.8", features = ["v4"] }
serde_json = "1.0"
icn_types = { path = "../icn_types" }

[dev-dependencies]
tokio-test = "0.4"
