[package]
name = "icn_common"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
rand = "0.8"
rand_chacha = "0.3"
ed25519-dalek = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
uuid = "0.8"

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"