[package]
name = "icn_consensus"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
thiserror = "1.0"
icn_common = { path = "../icn_common" }
icn_core = { path = "../icn_core" }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
