[package]
name = "icn_consensus"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
thiserror = "1.0"
icn_utils = { path = "../icn_utils" }
chrono = "0.4"
sha2 = "0.9"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
