[package]
name = "icn_consensus"
version = "0.1.0"
edition = "2021"

[dependencies]
icn_common_types = { path = "../icn_common_types" }
icn_common = { path = "../icn_common" }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
sha2 = "0.9"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }