[package]
name = "icn_core"
version = "0.1.0"
edition = "2021"

[dependencies]
icn_common = { path = "../icn_common" }
icn_blockchain = { path = "../icn_blockchain" }
icn_consensus = { path = "../icn_consensus" }
icn_currency = { path = "../icn_currency" }
icn_governance = { path = "../icn_governance" }
icn_identity = { path = "../icn_identity" }
icn_network = { path = "../icn_network" }
icn_sharding = { path = "../icn_sharding" }
icn_vm = { path = "../icn_vm" }
icn_language = { path = "../icn_language" }
tokio = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = "1.0" # Add this line

[dev-dependencies]
tokio-test = "0.4"
