[package]
name = "icn_currency"
version = "0.1.0"
edition = "2021"

[dependencies]
icn_core = { path = "../icn_core" }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
thiserror = "1.0"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
