[package]
name = "icn_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
icn_core = { path = "../icn_core" }
icn_common = { path = "../icn_common" }
icn_blockchain = { path = "../icn_blockchain" }
icn_consensus = { path = "../icn_consensus" }
icn_currency = { path = "../icn_currency" }
icn_governance = { path = "../icn_governance" }
icn_identity = { path = "../icn_identity" }
icn_network = { path = "../icn_network" }
icn_sharding = { path = "../icn_sharding" }
icn_storage = { path = "../icn_storage" }
icn_vm = { path = "../icn_vm" }
icn_zkp = { path = "../icn_zkp" }
icn_smart_contracts = { path = "../icn_smart_contracts" }
icn_reputation = { path = "../icn_reputation" }
icn_market = { path = "../icn_market" }
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.9"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"