[package]
name = "icn_identity"
version = "0.1.0"
edition = "2021"

[dependencies]
icn_core = { path = "../icn_core" }
ed25519-dalek = "1.0"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }