# File: /home/matt/InterCooperative-Network/crates/icn_language/Cargo.toml

[package]
name = "icn_language"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = "7.1.0"
serde = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
icn_vm = { path = "../icn_vm" }

[dev-dependencies]
env_logger = { workspace = true }
