[package]
name = "icn_network"
version = "0.1.0"
edition = "2021"

[dependencies]
icn_common_types = { path = "../icn_common_types" }
icn_common = { path = "../icn_common" }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
thiserror = "1.0"

# Remove the dependency on icn_core
# icn_core = { path = "../icn_core" }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }