[package]
name = "icn_sharding"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
uuid = "1.0"
sha2 = "0.9"
log = "0.4"
thiserror = "1.0"

[dependencies.ed25519-dalek]
version = "1.0"
features = ["std"]

[dependencies]
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.8"

[dependencies.icn_blockchain]
path = "../icn_blockchain"

[dependencies.icn_network]
path = "../icn_network"

[dependencies.icn_currency]
path = "../icn_currency"

[dependencies.icn_error]
path = "../icn_error"
