[package]
name = "icn_sharding"
version = "0.1.0"
edition = "2021"

[dependencies]
icn_common_types = { path = "../icn_common_types" }
icn_common = { path = "../icn_common" }
icn_blockchain = { path = "../icn_blockchain" }
icn_core = { path = "../icn_core" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
sha2 = "0.9"

[dev-dependencies]
tokio-test = "0.4"