[package]
name = "icn_storage"
version = "0.1.0"
edition = "2021"

[dependencies]
icn_common_types = { path = "../icn_common_types" }
icn_common = { path = "../icn_common" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
thiserror = "1.0"
sha2 = "0.9"

# Remove the dependency on icn_core
# icn_core = { path = "../icn_core" }

[dev-dependencies]
tokio-test = "0.4"