[package]
name = "icn_vm"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
icn_types = { path = "../icn_types" }

[dev-dependencies]
tokio-test = "0.4"
