# File: /home/matt/InterCooperative-Network/crates/icn_vm/Cargo.toml

[package]
name = "icn_vm"
version = "0.1.0"
edition = "2021"

[dependencies]
icn_common = { path = "../icn_common" }
icn_language = { path = "../icn_language" }  # Add this line
serde = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"