// File: crates/icn_zkp/Cargo.toml
[package]
name = "icn_zkp"
version = "0.1.0"
edition = "2021"

[dependencies]
icn_common = { path = "../icn_common" }
bulletproofs = "4.0.0"
curve25519-dalek = "3.2.0"
merlin = "3.0.0"
rand = "0.8.5"
subtle = "2.4.1"
rayon = "1.5.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3"